base/linux-lpic-learning-platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linux-lpic-learning-platform
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: linux.ajti.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linux-lpic-learning-platform
                port:
                  number: 80
